apps/grafana/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.joejad.com`)
      kind: Rule
      services:
        - name: prometheus-community-grafana
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: local-joejad-tls
